syntax = "proto3";

package message;

option go_package = "/message";

message MessageRequest {
}

message MessageResponse {
  string session_id = 1;
  double frequency = 2;
  int64 timestamp = 3;
}

service MessageService {
  rpc StreamFrequency(MessageRequest) returns (stream MessageResponse) {}
}